fixing search icon that was not showing

--- a/public/css/fonts/fontello/css/icn-font.css
+++ b/public/css/fonts/fontello/css/icn-font.css
@@ -1,13 +1,11 @@
-@charset "UTF-8";
-
- @font-face {
+@font-face {
   font-family: 'icn-font';
-  src: url('../font/icn-font.eot?76168274');
-  src: url('../font/icn-font.eot?76168274#iefix') format('embedded-opentype'),
-       url('../font/icn-font.woff2?76168274') format('woff2'),
-       url('../font/icn-font.woff?76168274') format('woff'),
-       url('../font/icn-font.ttf?76168274') format('truetype'),
-       url('../font/icn-font.svg?76168274#icn-font') format('svg');
+  src: url('../font/icn-font.eot?30124799');
+  src: url('../font/icn-font.eot?30124799#iefix') format('embedded-opentype'),
+       url('../font/icn-font.woff2?30124799') format('woff2'),
+       url('../font/icn-font.woff?30124799') format('woff'),
+       url('../font/icn-font.ttf?30124799') format('truetype'),
+       url('../font/icn-font.svg?30124799#icn-font') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'icn-font';
-    src: url('../font/icn-font.svg?76168274#icn-font') format('svg');
+    src: url('../font/icn-font.svg?30124799#icn-font') format('svg');
   }
 }
 */
@@ -63,9 +61,9 @@
 .icn-github-circled:before { content: '\67'; } /* 'g' */
 .icn-share:before { content: '\68'; } /* 'h' */
 .icn-ig:before { content: '\69'; } /* 'i' */
+.icn-search:before { content: '\6c'; } /* 'l' */
 .icn-link:before { content: '\70'; } /* 'p' */
 .icn-logo:before { content: '\73'; } /* 's' */
 .icn-twitter:before { content: '\74'; } /* 't' */
 .icn-up:before { content: '\75'; } /* 'u' */
 .icn-docs:before { content: '\f0c5'; } /* '' */
-.icn-search:before { content: '🔍'; } /* '\1f50d' */
